--- a/iaroapp/static/css/view_slides.css
+++ b/iaroapp/static/css/view_slides.css
@@ -1,96 +1,196 @@
+    .row {
+        display: flex;
+        flex-direction: column;
+        max-height: calc(100vh - 12rem);
+    }
 
-.swiper-container {
-    width: 100%;
-    height: 100%;
-}
+    .col-lg-12 {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        max-height: calc(100vh - 11.4rem);
+    }
 
-.swiper-slide {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
+    .slider__card {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        max-height: calc(100vh - 4rem);
+        overflow: hidden;
+    }
 
-.swiper-slide img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    cursor: pointer;
-    border-radius: 0.5rem;
-}
+    .card-body {
+        flex: 1;
+        overflow-y: auto;
+    }
 
-.swiper-button-next, .swiper-button-prev {
-    scale: 0.7;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 50%;
-    width: 55px;
-    height: 55px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    .glide__slide {
+        display: flex;
+        justify-content: center;
+    }
 
-.swiper-button-next::after, .swiper-button-prev::after {
-    font-size: 20px;
-}
+    .glide__slide img {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
+    }
 
-.card-body {
-    overflow: hidden;
-}
+    .fullscreen-modal .glide__slide img {
+        height: 100vh;
+    }
 
-.fullscreen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    z-index: 9999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    .glide__arrows {
+        display: flex;
+        justify-content: space-between;
+        position: absolute;
+        top: 50%;
+        width: 100%;
+        transform: translateY(-50%);
+        z-index: 2;
+    }
 
-.fullscreen .swiper-container {
-    width: 100%;
-    height: 100%;
-}
+    .glide__arrow {
+        background: rgba(0, 123, 255, 0.25);
+        border: none;
+        color: rgba(255, 255, 255, 0.5);
+        cursor: pointer;
+        border-radius: 50%;
+        transition: background 0.3s, transform 0.3s;
+        font-size: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+        width: 60px;
+        height: 60px;
+    }
 
-.exit-fullscreen-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 10000;
-    background-color: rgba(255, 255, 255, 0.5);
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 1rem;
-}
+    .glide__arrow:hover {
+        background: rgba(0, 86, 179, 0.75);
+    }
 
-.swiper-pagination-wrapper {
-    position: relative;
-    margin-bottom: 100px;
-}
+    @media (max-width: 1200px) {
+        .glide__arrow {
+            display: none !important;
+        }
+    }
 
-.swiper-pagination {
-    text-align: center;
-    top: -26px;
-}
 
-.swiper-button-next, .swiper-button-prev {
-    position: absolute;
-    transform: translateY(-50%);
-    z-index: 10;
-    width: 44px;
-    height: 44px;
-    font-size: 16px;
-}
+    .glide__bullets {
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        bottom: 10px;
+        width: 100%;
+    }
 
-.swiper-button-next {
-    right: calc(50% - 100px);
-}
+    .glide__bullet {
+        background: rgba(0, 123, 255, 0.75);
+        border: none;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        margin: 0 5px;
+        cursor: pointer;
+        transition: background 0.3s;
+    }
 
-.swiper-button-prev {
-    left: calc(50% - 100px);
-}
+    .glide__bullet:hover,
+    .glide__bullet--active {
+        background: rgba(0, 86, 179, 0.8);
+    }
+
+    .fullscreen-modal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        z-index: 9999;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        overflow: hidden;
+    }
+
+    .modal-content {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+
+    .modal-content .glide {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .modal-content .glide__slide {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    .glide__slides {
+        align-items: center;
+    }
+
+    .exit__btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        border-radius: 0.5rem !important;
+        background-color: rgba(0, 0, 0, 0.6);
+        background-image: none !important;
+        color: white;
+        z-index: 3;
+        padding: 10px 20px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+
+    }
+
+    .exit__btn:hover {
+        background-color: rgba(0, 86, 179, 0.8) !important;
+    }
+    .glide__arrow--right {
+        right: 0.8em !important;
+    }
+    .glide__arrow--left {
+        left: 0.8em !important;
+    }
+
+    .refresh__btn {
+        z-index: 10010;
+        width: 40px;
+        height: 40px;
+        border-radius: 50% !important;
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        font-weight: 400 !important;
+    }
+
+    .btn__control {
+        font-size: 16px !important;
+        padding-left: 1.4rem !important;
+        padding-right: 1.4rem !important;
+        padding-top: 0.55rem;
+        padding-bottom: 0.55rem;
+    }
+
+    .title {
+        justify-content: flex-start !important;
+    }
