--- a/interactions/templates/video_list.html
+++ b/interactions/templates/video_list.html
@@ -1,5 +1,6 @@
 {% extends "base_generic.html" %}
 {% load static %}
+{% load embed_video_tags %}
 
 {% block extra_head %}
     <title>iaroapp - Video List</title>
@@ -13,6 +14,7 @@
 
 {% block content %}
 <div class="row">
+
     {% for category, videos in videos_by_category.items %}
         <div class="col-lg-12 mb-4">
             <div class="card h-100" id="video-list">
@@ -26,10 +28,14 @@
                             <h5>{{ video.title }}</h5>
                             <p>{{ video.description|safe }}</p>
                             <div class="video-wrap d-flex justify-content-center">
-                                <video controls>
-                                    <source src="{{ video.video_file.url }}" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
+                                {% if video.video_file %}
+                                    <video controls>
+                                        <source src="{{ video.video_file.url }}" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                {% elif video.video_url %}
+                                    {% video video.video_url "560x315" %}
+                                {% endif %}
                             </div>
                         </li>
                     {% endfor %}
@@ -40,12 +46,15 @@
     {% endfor %}
 </div>
 
-    <style>
-
-        video {
-            border: 1px solid #273047;
-            max-width: 90%;
-            border-radius: 1rem;
-        }
-    </style>
+<style>
+    video {
+        border: 1px solid #273047;
+        max-width: 90%;
+        border-radius: 1rem;
+    }
+    iframe {
+        max-width: 90%;
+        border-radius: 1rem;
+    }
+</style>
 {% endblock %}
