testing security settings

--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -19,6 +19,7 @@
     </div>
 
     <div class="main__blocks">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/E1P3inZxKiE?si=bhQi_bjyPiR4wcSM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <div class="row">
             <div class="col-lg-4 mb-4">
                 <div class="card h-100">
